new email route confirm account

--- a/resources/views/emails/confirm.edge
+++ b/resources/views/emails/confirm.edge
@@ -1,2 +1,18 @@
 <strong>CONFIRME SUA CONTA</strong>
-<p>Confirme seu email <a href="https://form-calendar.netlify.app/confirm/{{ user_id }}">clicando aqui </a></p>
+
+<p>Parabéns, {{ label }}!</p>
+
+<p>Agora você faz parte do time DP System
+e terá uma gestão bem mais completa e
+simplificada da sua clínica ou consultório.</p>
+
+<p>Para finalizar o seu cadastro, basta acessar o link abaixo:</p>
+<a href="{{ site_activation }}"></a>
+
+<p>Desde já, desejamos as boas vindas.</p>
+
+<p>Qualquer dúvida, não hesite em entrar em contato com nossa equipe.</p>
+
+<p>Estamos à disposição.</p>
+<p>Um abraço do time</p>
+<p>DP System.</p>
