feat and fix - log e send email

--- a/resources/views/emails/confirm.edge
+++ b/resources/views/emails/confirm.edge
@@ -7,7 +7,7 @@ e terá uma gestão bem mais completa e
 simplificada da sua clínica ou consultório.</p>
 
 <p>Para finalizar o seu cadastro, basta acessar o link abaixo:</p>
-<a href="{{ site_activation }}"></a>
+<a href="{{ site_activation }}">ATIVAR EMAIL</a>
 
 <p>Desde já, desejamos as boas vindas.</p>
 
