--- a/resources/views/emails/confirm.edge
+++ b/resources/views/emails/confirm.edge
@@ -1,18 +1,59 @@
-<strong>CONFIRME SUA CONTA</strong>
+ <div style="
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 480px;
+    height: 100%;
+    background-color: #f5f5f5;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 2px solid #e5e5e5;
+  ">
+    <div style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+      <img alt="Icon Confirm" width="125" src="logo-blue.png" />
+    </div>
+    <h1 style="
 
-<p>Parabéns, {{ label }}!</p>
+      font-variant: small-caps;
+      font-size: 24px;
+      font-weight: 600;
+      margin-bottom: 20px;
+      text-align: center;
+    ">Ative Sua Conta</h1>
 
-<p>Agora você faz parte do time DP System
-e terá uma gestão bem mais completa e
-simplificada da sua clínica ou consultório.</p>
+    <p style="text-align: center;"><strong>Parabéns, {{ label }}!</strong></p>
 
-<p>Para finalizar o seu cadastro, basta acessar o link abaixo:</p>
-<a href="{{ site_activation }}">ATIVAR EMAIL</a>
+    <p style="text-align: justify;
+      text-indent: 2rem;
+    ">
+      Agora você faz parte do time DP System
+      e terá uma gestão bem mais completa e
+      simplificada da sua clínica ou consultório.
+    </p>
+    <p style="text-align: center; font-family:  Georgia, Courier, monospace;">Para finalizar o seu
+      cadastro, basta acessar o link abaixo:</p>
+    <a href="{{ site_activation }}" style="
+      display: block;
+      width: 100%;
+      height: 40px;
+      background-color: #3b5998;
+      color: #fff;
+      text-decoration: none;
+      text-align: center;
+      line-height: 40px;
+      font-size: 16px;
+      font-weight: 600;
+      margin-top: 20px;
+    ">
+      ATIVAR EMAIL
+    </a>
 
-<p>Desde já, desejamos as boas vindas.</p>
-
-<p>Qualquer dúvida, não hesite em entrar em contato com nossa equipe.</p>
-
-<p>Estamos à disposição.</p>
-<p>Um abraço do time</p>
-<p>DP System.</p>
+    <p style="text-align: center;">Desde já, desejamos as boas vindas.</p>
+    <p style="text-align: center;">Qualquer dúvida, não hesite em entrar em contato com nossa equipe.</p>
+    <p style="text-align: center;">Estamos à disposição.</p>
+    <p style="text-align: center;">Um abraço do time, </p>
+    <p style="text-align: center;">Atenciosamente,</p>
+    <p style="text-align: center;"><strong>DP System.</strong></p>
+  </div>
