--- a/resources/views/emails/confirm.edge
+++ b/resources/views/emails/confirm.edge
@@ -1,4 +1,11 @@
  <div style="
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  ">
+    <div style="
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 480px;
     height: 100%;
@@ -7,14 +14,78 @@
     box-sizing: border-box;
     border: 2px solid #e5e5e5;
   ">
-    <div style="
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        ">
-      <img alt="Icon Confirm" width="125" src="logo-blue.png" />
-    </div>
-    <h1 style="
+      <div style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    ">
+        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="150pt" height="150pt"
+          viewBox="0 0 899.000000 930.000000" preserveAspectRatio="xMidYMid meet">
+
+          <g transform="translate(0.000000,930.000000) scale(0.100000,-0.100000)" fill="#00399b" stroke="none">
+            <path d="M3258 8558 l-276 -743 -363 -6 c-280 -5 -385 -10 -454 -23 -267 -50
+    -484 -131 -693 -259 -454 -277 -764 -705 -874 -1210 -20 -91 -23 -130 -23
+    -372 0 -262 1 -274 29 -390 112 -475 402 -882 829 -1159 165 -108 423 -216
+    622 -262 183 -41 244 -44 1181 -44 l901 0 418 1073 c573 1467 900 2296 912
+    2308 7 7 215 9 594 6 625 -4 631 -4 794 -59 336 -111 605 -407 682 -751 26
+    -117 21 -309 -11 -432 -59 -228 -192 -427 -376 -567 -85 -65 -265 -152 -365
+    -177 -151 -37 -223 -41 -810 -41 l-573 0 -10 -27 c-5 -16 -199 -538 -431
+    -1161 -232 -623 -421 -1135 -421 -1137 0 -3 205 -4 456 -3 l456 3 272 730
+    c149 402 275 736 280 743 7 11 52 13 245 7 378 -11 608 15 855 96 666 219
+    1175 787 1286 1435 68 397 14 787 -155 1123 -306 609 -913 1015 -1590 1061
+    -153 11 -1129 13 -1526 3 l-276 -6 -422 -1081 c-232 -595 -529 -1353 -660
+    -1686 l-239 -605 -608 0 -609 1 -100 27 c-369 101 -654 382 -751 742 -15 56
+    -19 103 -18 235 1 196 17 268 93 425 59 120 122 206 222 300 129 122 276 203
+    457 253 l97 27 637 3 637 3 21 57 c170 451 834 2243 838 2260 l4 22 -454 0
+    -454 0 -276 -742z" />
+            <path d="M735 2825 c-85 -18 -214 -80 -276 -134 -64 -56 -135 -162 -165 -251
+    -49 -141 -44 -338 12 -457 52 -109 131 -175 395 -332 188 -111 248 -162 286
+    -239 23 -48 28 -70 28 -137 0 -52 -7 -99 -18 -133 -26 -74 -100 -151 -179
+    -188 -56 -25 -74 -29 -163 -29 -89 0 -107 3 -163 29 -75 35 -172 132 -224 225
+    l-35 62 -112 -91 c-61 -50 -111 -96 -111 -101 0 -20 44 -96 94 -162 117 -156
+    274 -234 496 -244 375 -18 653 160 727 464 25 108 21 279 -9 374 -56 172 -159
+    272 -456 439 -126 71 -217 151 -253 220 -18 34 -23 62 -24 115 0 124 68 229
+    185 284 47 22 68 26 150 26 83 -1 102 -4 151 -28 52 -25 135 -101 184 -169
+    l20 -27 100 93 100 93 -30 43 c-77 112 -190 195 -319 236 -102 33 -283 41
+    -391 19z" />
+            <path d="M4426 2528 c-3 -18 -17 -123 -31 -233 -14 -110 -27 -210 -30 -222 -5
+    -22 -9 -23 -120 -23 -85 0 -115 -3 -115 -12 0 -7 -7 -58 -15 -113 -8 -55 -15
+    -108 -15 -117 0 -16 12 -18 116 -18 l116 0 -6 -37 c-9 -54 -136 -1032 -136
+    -1044 0 -5 65 -9 153 -9 l152 0 68 528 c38 290 71 535 73 545 5 15 20 17 124
+    17 137 0 123 -13 140 130 6 52 14 103 16 113 5 16 -5 17 -120 17 l-125 0 4 28
+    c3 15 16 119 30 232 14 113 28 215 30 228 l5 22 -154 0 -154 0 -6 -32z" />
+            <path d="M3396 2084 c-217 -48 -356 -207 -356 -408 0 -167 67 -252 312 -398
+    137 -81 194 -123 223 -166 49 -72 24 -161 -57 -204 -35 -19 -59 -23 -128 -23
+    -117 0 -189 35 -288 139 l-71 75 -85 -100 c-47 -56 -86 -104 -86 -109 0 -4 32
+    -38 72 -75 284 -263 784 -224 931 74 31 63 32 70 32 191 0 117 -2 128 -27 177
+    -49 92 -132 158 -324 257 -184 94 -241 178 -181 267 77 116 269 99 416 -37
+    l59 -54 93 101 94 102 -48 42 c-66 58 -160 112 -237 136 -88 28 -251 34 -344
+    13z" />
+            <path d="M5585 2085 c-150 -28 -287 -104 -390 -217 -150 -164 -214 -359 -203
+    -612 14 -288 167 -494 433 -583 73 -24 94 -27 230 -27 136 0 158 3 230 27 44
+    15 109 46 145 69 67 44 200 172 200 192 -1 6 -49 50 -108 98 l-107 87 -50 -54
+    c-67 -72 -126 -111 -203 -135 -137 -43 -243 -19 -338 75 -72 70 -103 140 -112
+    248 l-5 67 517 0 516 0 0 138 c0 225 -46 358 -166 478 -137 138 -355 193 -589
+    149z m280 -284 c89 -39 144 -114 161 -220 l7 -41 -351 0 -351 0 14 39 c42 120
+    137 203 270 237 73 19 189 12 250 -15z" />
+            <path d="M7324 2081 c-91 -25 -155 -57 -238 -121 -36 -28 -66 -47 -66 -43 0 4
+    7 33 15 63 8 30 15 58 15 63 0 4 -67 7 -149 7 l-149 0 -6 -37 c-4 -21 -42
+    -312 -86 -648 -44 -335 -82 -622 -85 -637 l-4 -28 154 0 c136 0 155 2 155 16
+    0 51 94 734 111 807 53 227 172 347 343 347 76 0 148 -37 179 -92 28 -49 47
+    -127 47 -196 0 -26 -24 -235 -53 -465 l-53 -417 155 2 155 3 47 370 c26 204
+    54 400 63 436 26 113 65 196 117 253 67 74 130 100 235 101 71 0 85 -3 122
+    -28 27 -17 51 -45 68 -79 45 -88 43 -151 -15 -598 -29 -217 -54 -410 -57 -427
+    l-6 -33 156 0 c153 0 156 0 161 23 9 41 94 720 105 839 29 312 -68 483 -298
+    528 -185 37 -382 -26 -538 -173 -36 -33 -66 -58 -68 -56 -1 2 -16 28 -32 58
+    -36 68 -100 124 -173 152 -81 31 -232 36 -327 10z" />
+            <path d="M1595 1983 c59 -165 365 -1056 365 -1064 0 -5 -121 -199 -270 -431
+    l-269 -423 156 -3 c86 -1 160 1 165 6 4 4 285 451 623 993 l616 984 -167 3
+    c-92 1 -171 -1 -175 -5 -20 -21 -417 -710 -457 -793 l-46 -95 -14 100 c-10 68
+    -48 210 -121 445 l-107 345 -162 3 -162 2 25 -67z" />
+          </g>
+        </svg>
+      </div>
+      <h1 style="
 
       font-variant: small-caps;
       font-size: 24px;
@@ -23,22 +94,22 @@
       text-align: center;
     ">Ative Sua Conta</h1>
 
-    <p style="text-align: center;"><strong>Parabéns, {{ label }}!</strong></p>
+      <p style="text-align: center;"><strong>Parabéns, {{ label }}!</strong></p>
 
-    <p style="text-align: justify;
+      <p style="text-align: justify;
       text-indent: 2rem;
     ">
-      Agora você faz parte do time DP System
-      e terá uma gestão bem mais completa e
-      simplificada da sua clínica ou consultório.
-    </p>
-    <p style="text-align: center; font-family:  Georgia, Courier, monospace;">Para finalizar o seu
-      cadastro, basta acessar o link abaixo:</p>
-    <a href="{{ site_activation }}" style="
+        Agora você faz parte do time DP System
+        e terá uma gestão bem mais completa e
+        simplificada da sua clínica ou consultório.
+      </p>
+      <p style="text-align: center; font-family:  Georgia, Courier, monospace;">Para finalizar o seu
+        cadastro, basta acessar o link abaixo:</p>
+      <a href="{{ site_activation }}" style="
       display: block;
       width: 100%;
       height: 40px;
-      background-color: #3b5998;
+      background-color: #00399b;
       color: #fff;
       text-decoration: none;
       text-align: center;
@@ -47,13 +118,14 @@
       font-weight: 600;
       margin-top: 20px;
     ">
-      ATIVAR EMAIL
-    </a>
+        ATIVAR EMAIL
+      </a>
 
-    <p style="text-align: center;">Desde já, desejamos as boas vindas.</p>
-    <p style="text-align: center;">Qualquer dúvida, não hesite em entrar em contato com nossa equipe.</p>
-    <p style="text-align: center;">Estamos à disposição.</p>
-    <p style="text-align: center;">Um abraço do time, </p>
-    <p style="text-align: center;">Atenciosamente,</p>
-    <p style="text-align: center;"><strong>DP System.</strong></p>
+      <p style="text-align: center;">Desde já, desejamos as boas vindas.</p>
+      <p style="text-align: center;">Qualquer dúvida, não hesite em entrar em contato com nossa equipe.</p>
+      <p style="text-align: center;">Estamos à disposição.</p>
+      <p style="text-align: center;">Um abraço do time, </p>
+      <p style="text-align: center;">Atenciosamente,</p>
+      <p style="text-align: center;"><strong>DP System.</strong></p>
+    </div>
   </div>
