--- a/resources/views/emails/confirm.html
+++ b/resources/views/emails/confirm.html
@@ -1,4 +1,17 @@
- <div style="
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Page Title</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <script src='main.js'></script>
+</head>
+
+<body>
+  <div style="
     width: 100%;
     height: 100%;
     display: flex;
@@ -6,7 +19,7 @@
     align-items: center;
   ">
     <div style="
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 480px;
     height: 100%;
     background-color: #f5f5f5;
@@ -129,3 +142,6 @@
       <p style="text-align: center;"><strong>DP System.</strong></p>
     </div>
   </div>
+</body>
+
+</html>
