feat: cacheamento nas rotas, evitando acessos ao bd

--- a/resources/views/emails/confirm.edge
+++ b/resources/views/emails/confirm.edge
@@ -22,7 +22,7 @@
 						width: 100%;
 					">
 				<div>
-					<img src="../../../public/logo.png" alt="Logo DP System" style="
+					<img src="cid:logo" alt="Logo DP System" style="
 					width: 150px;
 						height: 150px;
 						margin: auto;
