fix: correção na mensagem de email de nova senha

--- a/resources/views/emails/create-password.edge
+++ b/resources/views/emails/create-password.edge
@@ -42,12 +42,12 @@
 				Sua Senha DP System
 			</h1>
 
-			<p style="text-align: center;"><strong>Parabéns, {{ label }}!</strong></p>
+			<p style="text-align: center;"><strong>Bem Vindo!</strong></p>
 
 			<p style="text-align: justify; text-indent: 2rem;">
 				Agora você faz parte do time DP System
 				e terá uma gestão bem mais completa e
-				simplificada da sua clínica ou consultório.
+				simplificada.
 			</p>
 			<p style="text-align: center;">Sua senha de acesso é: <strong>{{ password }}</strong></p>
 
