--- a/resources/views/emails/create-password.edge
+++ b/resources/views/emails/create-password.edge
@@ -8,7 +8,7 @@
   			">
 		<div style="
 					font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-					width: 480px;
+					width: 640px;
 					height: 100%;
 					background-color: #fdfdfd;
 					padding: 20px;
@@ -52,12 +52,17 @@
 			<p style="text-align: center;">Sua senha de acesso é: <strong>{{ password }}</strong></p>
 
 			</br>
-			<p style="text-align: center;">Desde já, desejamos as boas vindas.</p>
-			<p style="text-align: center;">Qualquer dúvida, não hesite em entrar em contato com nossa equipe.</p>
-			<p style="text-align: center;">Estamos à disposição.</p>
-			<p style="text-align: center;">Um abraço do time, </p>
-			<p style="text-align: center;">Atenciosamente,</p>
-			<p style="text-align: center;"><strong>DP System.</strong></p>
+			<div style="
+				font-size: small;
+			">
+				<p style="text-align: center; font-weight: 600;"> Este é um e-mail automático, favor não responder.</p>
+				<p style="text-align: center;">Desde já, agradecemos.</p>
+				<p style="text-align: center;">Qualquer dúvida, não hesite em entrar em contato com nossa equipe.</p>
+				<p style="text-align: center;">Estamos à disposição.</p>
+				<p style="text-align: center;">Um abraço do time, </p>
+				<p style="text-align: center;">Atenciosamente,</p>
+				<p style="text-align: center; font-size: large;"><strong>DP System.</strong></p>
+			</div>
 		</div>
 	</div>
 </body>
